AsyncRestTemplate과 Callback을 활용한 단일 스레드 비동기 처리 (Callback hell)